<resources>
    <string name="app_name">CSS Mobile</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="button_send">Login</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string name="title_activity_login">LoginActivity</string>

    <string name="lb_remember_me">Remember me</string>
    <string name="lb_login">Login</string>
    <string name="lb_account">Account</string>
    <string name="lb_password">Password</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lb_atmid">ATMID</string>
    <string name="lb_location">Location</string>
    <string name="lb_issue">Issue</string>
    <string name="lb_bank">Bank</string>
    <string name="lb_serial">Serial</string>
    <string name="lb_branch">Branch</string>
    <string name="lb_serviceid">ServiceId</string>
    <string name="lb_contract">Contract</string>
    <string name="lb_starttime">Start Time</string>
    <string name="lb_solution">Solution</string>
    <string name="lb_checkin">Check in</string>
     <string name="lb_closeservice">Close Service</string>
    <string name="lb_partname">Part Name</string>
    <string name="lb_quantity">Quantity</string>
    <string name="lb_store">Store</string>
    <string name="desImgCap">Image view</string>
    <string name="lb_photo_gallery">Photo Gallery</string>
    <string name="lb_take_photo">Take Photo</string>
    <string name="btn_ok">Ok</string>
    <string name="lb_scan">Scan</string>
    <string name="radio_inbox">Inbox</string>
    <string name="radio_outbox">Outbox</string>
    <string name="lb_submit">Submit</string>
    <string name="title_hint">Nhập tin nhắn</string>
    <string name="title_talk_to_leader">Talk To Leadern</string>
    <string name="lb_from">From</string>
    <string name="lb_to">To</string>
    <string name="lb_search">Search</string>
    <string name="to_do_list">To do list</string>
     <string name="lb_url_server">URL</string>
    <string name="lb_chat_server">Server Chat</string>
    <string name="lb_chat_port">Port Chat</string>
    <string name="lb_save">Save</string>
    <string name="lb_restore_default">Restore Default</string>
    <string name="lb_service_number_phone">Service Number Phone</string>
    <string name="lb_user_to_do_list">User To Do List</string>
     <string name="lb_password_to_do_list">Password To Do List</string>
</resources>
