<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--  ListRow Left sied Thumbnail image -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/lb_atmid"
            android:layout_width="1dip"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvATMID"
            android:layout_width="1dip"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/lb_bank"
            android:layout_width="1dip"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvBank"
            android:layout_width="1dip"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/lb_location"
            android:layout_width="1dip"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="1dip"
            android:layout_weight="3"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/lb_issue"
            android:textStyle="bold"
            android:layout_width="1dip"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvIssue"
            android:layout_width="1dip"
            android:layout_weight="3"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
