<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.microtecweb.css_mobile.ServiceHistoryFragment">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RadioGroup
        android:id="@+id/radioDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioInbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_inbox"
            android:checked="true" />
        <RadioButton
            android:id="@+id/radioOutbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_outbox" />
    </RadioGroup>
    <Button
        android:id="@+id/btScan"
        android:text="@string/lb_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/radioDirection"/>
    <ListView
        android:id="@+id/listSms"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btScan">
    </ListView>
    </RelativeLayout>
</FrameLayout>
