<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingLeft="40dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--  ListRow Left sied Thumbnail image -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lb_atmid"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvATMID"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/lb_serial"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvSerial"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lb_bank"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvBank"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/lb_branch"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvBranch"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lb_serviceid"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvServiceId"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/lb_contract"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvContract"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lb_location"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="1dip"
                android:layout_weight="3"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lb_starttime"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvStartTime"
                android:layout_width="1dip"
                android:layout_weight="3"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lb_issue"
                android:textStyle="bold"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvIssue"
                android:layout_width="1dip"
                android:layout_weight="3"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lb_solution"
                android:textStyle="bold"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvSolution"
                android:layout_width="1dip"
                android:layout_weight="3"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lb_partname"
                android:layout_width="1dip"
                android:layout_weight="2"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/lb_quantity"
                android:layout_width="1dip"
                android:layout_weight="2"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/lb_store"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/lstServicePart"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:divider="#b5b5b5"
                android:dividerHeight="1dp" />
        </LinearLayout>



    </LinearLayout>

</LinearLayout> 