<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.microtecweb.css_mobile.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
       <ImageView
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:src="@drawable/ic_launcher"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <TextView android:text="@string/lb_account"
        android:layout_width="1dip"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/txtAccount"
        android:layout_width="1dip"
        android:layout_weight="2"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView android:text="@string/lb_password"
            android:layout_width="1dip"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/txtPassword" android:inputType="textPassword"
            android:layout_width="1dip"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/ckRememberMe"
            android:text="@string/lb_remember_me"
            android:layout_width="1dip"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btLogin"
            android:text="@string/lb_login"
            android:layout_width="1dip"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
