<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.microtecweb.css_mobile.ConfigFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--  ListRow Left sied Thumbnail image -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lb_url_server"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/txtURL"
                android:layout_width="1dip"
                android:layout_weight="3"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lb_chat_server"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/txtChatServer"
                android:layout_width="1dip"
                android:layout_weight="3"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lb_chat_port"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/txtChatPort"
                android:layout_width="1dip"
                android:layout_weight="3"
                android:inputType="number"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lb_service_number_phone"
                android:layout_width="1dip"
                android:layout_weight="2"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/txtServiceNumberPhone"
                android:layout_width="1dip"
                android:layout_weight="2"
                android:inputType="phone"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btSaveConfig"
                android:text="@string/lb_save"
                android:layout_width="1dip"
                android:layout_weight="1"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btRestoreDefault"
                android:text="@string/lb_restore_default"
                android:layout_width="1dip"
                android:layout_weight="2"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>